# esp32s3-dc-motor-controller

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/at_server/: CMakeLists.txt  ei_at_server.cpp  ei_at_server_singleton.cpp  ei_classifier_porting.cpp  ei_classifier_porting.h
components/golfcar/: CMakeLists.txt  cubic_spline_planner.cpp  cubic_spline_planner.h  golfcar_control.cpp  golfcar_control.h  lqr_steer_control.cpp  lqr_steer_control.h  model_matrix.cpp  model_matrix.h  pid_controller.cpp  pid_controller.h
components/path_interpolation/: CMakeLists.txt  path_interpolation.c  path_interpolation.h
components/perfmon_monitor/: CMakeLists.txt  perfmon_monitor.c  perfmon_monitor.h
main/: CMakeLists.txt  app_loadcell.cpp  app_loadcell.h  app_main.c  app_main.cpp  app_opticalflow.cpp  app_opticalflow.h  at_handlers.cpp  at_handlers.h  define.h  motor_controller.c  motor_controller.h
main/motor/: motor_control.c  motor_control.h  pid_control.c  pid_control.h  timer_interrupt.c  timer_interrupt.h
